Update the Place.java